# indy-sdk

wrappers/android/: CMakeLists.txt  Jenkinsfile  README.md  build.gradle  ci_build.sh  docker-compose.yml  gradle.properties  settings.gradle
wrappers/android/config/docker/platform/: Dockerfile
wrappers/android/src/androidTest/: AndroidManifest.xml
wrappers/android/src/androidTest/java/org/hyperledger/indy/sdk/: AndroidInitHelper.java  IndyIntegrationTest.java  IndyIntegrationTestWithPoolAndSingleWallet.java
wrappers/android/src/androidTest/java/org/hyperledger/indy/sdk/anoncreds/: AnoncredsIntegrationTest.java
wrappers/android/src/androidTest/java/org/hyperledger/indy/sdk/demo/: AnoncredsDemoTest.java  CryptoDemoTest.java  LedgerDemoTest.java
wrappers/android/src/androidTest/java/org/hyperledger/indy/sdk/interaction/: AnoncredsVerifyProofAfterCredentialRevokeTest.java
wrappers/android/src/androidTest/java/org/hyperledger/indy/sdk/ledger/: AuthRuleRequestsTest.java  PoolRestartRequestTest.java
wrappers/android/src/androidTest/java/org/hyperledger/indy/sdk/payment/: BuildGetPaymentSourcesWithFromRequestTest.java
wrappers/android/src/androidTest/java/org/hyperledger/indy/sdk/pool/: CreatePoolTest.java
wrappers/android/src/androidTest/java/org/hyperledger/indy/sdk/utils/: AndroidInitHelper.java  EnvironmentUtils.java  PoolUtils.java  StorageUtils.java
wrappers/android/src/main/: AndroidManifest.xml
wrappers/android/src/main/java/org/hyperledger/indy/sdk/: IndyJava.java
wrappers/android/src/main/java/org/hyperledger/indy/sdk/anoncreds/: Anoncreds.java
(+78 files in other folders)
